Icon spring animation stutters heavily since 8598b654 (mutter 3.35.2)
The icon spring animation started stuttering very heavily and reliably just recently in 3.35.2.
8598b654ba8e76d6c59b2de9f0bd1238b21e7834 is the first bad commit
commit 8598b654ba8e76d6c59b2de9f0bd1238b21e7834
Author: Carlos Garnacho <carlosg@gnome.org>
Date: Tue Jul 30 23:50:22 2019 +0200
clutter/cogl: Use regions for clipping if necessary
Use the new cogl function to perform clipping if the clip area
consists of more than a single rectangle.
https://gitlab.gnome.org/GNOME/mutter/merge_requests/867
clutter/clutter/cogl/clutter-stage-cogl.c | 41 ++++++++++++++++++-------------
1 file changed, 24 insertions(+), 17 deletions(-)
Edited by Georges Basile Stavracas Neto